# GraphTraversalAlgorithmsVisualisation

./: CMakeLists.txt  README.md  algorithms.cpp  breadthfirst.h  cleantree.h  depthfirst.h  inorder.h  main.cpp  postorder.h  preorder.h  scrollingBuffer.h
graphs/: BasicTree.txt  LargeGraph.txt  LargeGraph2.txt  LargeTree.txt  LargeTree2.txt  MedGraph.txt  MedTree.txt  SmallGraph.txt  SmallTree.txt
